Remove support for katex && update dependency

--- a/package.json
+++ b/package.json
@@ -7,70 +7,68 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier 'src/**/*.{js,ts,jsx,tsx}' --write",
-    "extract": "i18next"
+    "format": "prettier 'src/**/*.{js,ts,jsx,tsx}' --write"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@headlessui/react": "^1.7.19",
-    "@vercel/analytics": "^1.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.2.0",
     "awesome-debounce-promise": "^2.1.0",
-    "axios": "^1.6.8",
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "csstype": "^3.1.3",
-    "dayjs": "^1.11.11",
-    "emoji-regex": "^10.3.0",
+    "dayjs": "^1.11.13",
+    "emoji-regex": "^10.4.0",
     "envdot": "^0.0.3",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.6.0",
     "jszip": "^3.10.1",
-    "mpegts.js": "^1.7.3",
-    "next": "^13.5.6",
+    "mpegts.js": "^1.8.0",
+    "next": "^15.2.2",
     "nextjs-progressbar": "^0.0.16",
     "plyr-react": "^5.3.0",
     "preview-office-docs": "^1.0.2",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
     "react-async-hook": "^4.0.0",
     "react-audio-player": "^0.17.0",
-    "react-cookie": "^4.1.1",
+    "react-cookie": "^8.0.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-hotkeys-hook": "^4.5.0",
-    "react-markdown": "^8.0.7",
-    "react-reader": "^1.2.2",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-hotkeys-hook": "^4.6.1",
+    "react-markdown": "^10.1.0",
+    "react-reader": "^2.0.13",
+    "react-syntax-highlighter": "^15.6.1",
     "react-use-system-theme": "^1.1.1",
-    "rehype-katex": "^6.0.3",
-    "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "swr": "^2.2.5",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "swr": "^2.3.3",
     "use-clipboard-copy": "^0.2.0",
     "use-constant": "^1.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "18.19.31",
-    "@types/react": "18.2.74",
+    "@types/node": "22.13.14",
+    "@types/react": "19.0.12",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.2.25",
-    "@types/react-pdf": "^6.2.0",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "autoprefixer": "^10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "13.5.6",
-    "eslint-config-prettier": "^8.10.0",
-    "postcss": "^8.4.38",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "tailwindcss": "^3.4.3",
-    "typescript": "5.4.5"
+    "@types/react-dom": "^19.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "9.23.0",
+    "eslint-config-next": "15.2.4",
+    "eslint-config-prettier": "^10.1.1",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.8.2"
   },
   "prettier": {
     "printWidth": 120,
